.chart/dev/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: k8s-cicd
  namespace: develop
spec:
  selector:
    app: k8s-cicd
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
