.chart/dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: k8s-cicd
  namespace: develop
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: k8s-cicd.local
    http:
      paths:
      - pathType: Prefix
        backend:
          service:
            name: k8s-cicd
            port:
              number: 80
